2006-06-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: Added checks on possible
	  empty fields in .desktop file, before starting building the
	  corresponding menu entry (Closes N#31669)

2006-06-02  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Desktop doesn't exec an application with options NOR
	output/log why its startup failed"
	* hildon-navigator/others-menu.c: properly parse the Exec field
	  before spawning an application

2006-06-01  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.21

2006-06-01  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm.h: Turn off TN debug messages

2006-06-01  Johan Bilien <johan.bilien@nokia.com>

	* hn-wm-watchable-app.h, hn-wm-watchable-app.c, hn-wm.c:
	  - New functions to update the .desktop file registry
	* others-menu.c: Register a dnotify callback for TN

2006-05-31  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Home applets not starting in some situation"
	(Closes N#31224)
	* hildon-home/layout-manager.c:
	  - add_new_applets(): Updating node value and show applet, when applet
	    exists but was previously removed during layout mode

2006-05-30  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Cannot select or unselect applets by using scroll key's
	midlle button." (Closes N#30420)
	* hildon-home/home-select-applets-dialog.c: Added key-press handler
	  to select/unselect when Enter is pressed

2006-05-30  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Weid application switcher behaviour after Home's Layout
	mode" (Closs N#29905)
	* hildon-navigator/hildon-navigator-main.c: do not apply
	  dimming/undimming recursively

2006-05-30  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "HOME: In Layout mode, pressing Home hardkey gives
	undesired response." (Closes N#30818)
	* hildon-navigator/application-switcher.c:
	  - mce_handler(): sensitive check added for as button to block Home
	    key handling
