@@ -1,5 +1,10 @@
 2006-06-02  Johan Bilien <johan.bilien@nokia.com>
 
+	* libhildonmenu/libhildonmenu.c: Do not store .desktop item information
+	  if Name= is empty
+
+2006-06-02  Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-navigator/others-menu.c: Added checks on possible
 	  empty fields in .desktop file, before starting building the
 	  corresponding menu entry (Closes N#31669)
